--- a/Caverna/Assembly-CSharp.csproj
+++ b/Caverna/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ServerScripts\AnimalHolder.cs" />
      <Compile Include="Assets\ServerScripts\AnimalManager.cs" />
      <Compile Include="Assets\ServerScripts\BuildingTile.cs" />
      <Compile Include="Assets\ServerScripts\CavernaActionSpace.cs" />
