--- a/Caverna/UnityVS.Caverna.CSharp.csproj
+++ b/Caverna/UnityVS.Caverna.CSharp.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\RoundMarkerScript.cs" />
     <Compile Include="Assets\ServerScripts\AnimalHolder.cs" />
     <Compile Include="Assets\ServerScripts\AnimalManager.cs" />
     <Compile Include="Assets\ServerScripts\BuildingTile.cs" />
